# your-app-name

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.licenses/: LICENSE-CC-BY-SA-40  LICENSE-MIT
backend/: api.py  app.py  main.py  models.py
src/: App.js
src/components/A/: index.js
src/components/ComponentA/: index.js  slice.js
src/components/ComponentB/: index.js  slice.js
src/components/ComponentC/: index.js  slice.js
src/components/ComponentD/: index.js  slice.js
src/store/: index.js  reducerManager.js
