[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The Backend"
authors = ["basejumpa"]
license = "CC BY-SA-4.0, MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
fastapi-cors = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
